--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,8 +9,8 @@ plugins {
 }
 
 android {
-    namespace = "com.example.swapngive"
-    compileSdk = flutter.compileSdkVersion
+    namespace = "com.example.swap"
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -24,11 +24,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.swapngive"
+        applicationId = "com.example.swap"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 23
+        targetSdk = 35
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
