--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,10 @@ dependencies:
   latlong2: ^0.9.1
   http: ^1.2.2
   carousel_slider: ^5.0.0
+  universal_html: ^2.2.4
+  font_awesome_flutter: ^10.7.0
   #webview_flutter: ^4.9.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -111,3 +114,4 @@ flutter:
 
   assets:
     - assets/map.html
+    - assets/images/google.png
