--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   carousel_slider: ^5.0.0
   universal_html: ^2.2.4
   font_awesome_flutter: ^10.7.0
+  #flutter_staggered_grid_view: ^0.7.0
   #webview_flutter: ^4.9.0
 
 
