--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,6 +130,7 @@ flutter:
     - assets/images/google.png
     - assets/images/user.png
     - assets/images/logosansnom.jpg
+    - assets/images/logo.jpg
 
   
     
