--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,16 +42,17 @@ dependencies:
   file_picker: ^8.1.2
   uuid: ^4.5.0
   image: ^4.2.0
+  intl_utils: ^2.8.7
   #google_maps_flutter: ^2.9.0
-  geocoding: ^3.0.0
-  google_maps_flutter_web: ^0.5.10
-  flutter_map: ^7.0.2
-  latlong2: ^0.9.1
+  #geocoding: ^3.0.0
+  #google_maps_flutter_web: ^0.5.10
+ # flutter_map: ^7.0.2
+ # latlong2: ^0.9.1
   http: ^1.2.2
   carousel_slider: ^5.0.0
   universal_html: ^2.2.4
   font_awesome_flutter: ^10.7.0
-  #flutter_staggered_grid_view: ^0.7.0
+  flutter_staggered_grid_view: ^0.7.0
   #webview_flutter: ^4.9.0
 
 
