style liste annonces ajusté

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -132,6 +132,7 @@ flutter:
     - assets/images/user.png
     - assets/images/logosansnom.jpg
     - assets/images/logo.jpg
+    - assets/images/logosansnom.jpg
 
   
     
