--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   universal_html: ^2.2.4
   font_awesome_flutter: ^10.7.0
   flutter_staggered_grid_view: ^0.7.0
+  image_picker_for_web: ^3.0.5
   #google_sign_in: ^6.2.1
   #webview_flutter: ^4.9.0
 
