--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,6 +127,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  
 
   assets:
     - assets/map.html
@@ -135,6 +136,16 @@ flutter:
     - assets/images/logosansnom.jpg
     - assets/images/logo.jpg
     - assets/images/logosansnom.jpg
+    - assets/images/Image1.jpeg
+    - assets/images/image2.jpg
+    - assets/images/image3.jpeg
+    - assets/images/image4.jpg
+    - assets/images/image5.jpeg
+    - assets/images/image6.jpeg
+    - assets/images/image7.jpeg
+    - assets/images/image8.jpg
+    - assets/images/image9.jpg
+          
 
   
     
