--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -145,6 +145,7 @@ flutter:
     - assets/images/image7.jpeg
     - assets/images/image8.jpg
     - assets/images/image9.jpg
+    - assets/images/user.png
           
 
   
